RESOLVED FIXED15812
some JavaScript tests (from the Mozilla test suite) are failing
https://bugs.webkit.org/show_bug.cgi?id=15812
Summary some JavaScript tests (from the Mozilla test suite) are failing
Darin Adler
Reported 2007-11-02 23:48:01 PDT
I have a patch that fixes 7 tests.
Attachments
patch (73.33 KB, patch)
2007-11-02 23:54 PDT, Darin Adler
mjs: review+
Darin Adler
Comment 1 2007-11-02 23:54:58 PDT
Maciej Stachowiak
Comment 2 2007-11-03 01:35:21 PDT
Comment on attachment 17012 [details] patch r=me
Darin Adler
Comment 3 2007-11-03 09:41:29 PDT
Committed revision 27405.
Note You need to log in before you can comment on or make changes to this bug.